# caligula

./: .gitmodules  EmbassySyncNote.md  Install.md  README.md  export-esp.sh
firmware/: Cargo.toml  buildError.txt  expanded.rs
firmware/.cargo/: config.toml
firmware/cli/: Cargo.toml  command_expanded.rs  justfile
firmware/cli/src/: cli_led.rs  lib.rs
firmware/cli/src/cli_led/: command.rs  command_callback.rs  writer.rs
firmware/v1/: memory.map  sss
hardware/: .gitignore
hardware/TMC2209-Breakout/: TMC2209-Breakout.kicad_prl  TMC2209-Breakout.kicad_pro
hardware/prototype/: caligula.kicad_pcb  caligula.kicad_prl  caligula.kicad_pro  caligula.kicad_sch  caligula_BOM.csv  fp-lib-table  sym-lib-table
hardware/simulation/: caligula_ph_amplifier_and_voltage_precondition.qopraw  caligula_ph_amplifier_and_voltage_precondition.qraw  caligula_ph_amplifier_and_voltage_precondition.qsch
hardware/simulation/libraries/: CA3140.CIR  CA3140.TSM
