[package]
name = "caligula"
edition = "2021"
version = "0.1.0"

[[bin]]
name = "caligula"
path = "./src/bin/main.rs"

[alias]
run-probe-rs = "probe-rs run --chip=esp32 --always-print-stacktrace --no-location --catch-hardfault"
run-monitor = "espflash monitor"

[dependencies]
heapless = { version = "0.8.0", default-features = false }
esp-hal = { version = "1.0.0-beta.1", features = ["unstable"] }
static_cell = { version = "2"}
defmt = {version = "0.3.10", optional=true}
defmt-test = "0.3.3"
embedded-io = "0.6"
embedded-io-async = "0.6"
esp-alloc = "0.8.0"
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-8192"] }
embassy-time = { version = "0.4.0" }
esp-hal-embassy = { version = "0.8.1" }
esp-println = { version = "0.14.0", features = [
  "esp32",
  "log-04",
  "defmt-espflash",
] }
esp-backtrace = { version = "0.16.0", features = [
  "panic-handler",
  "exception-handler",
  # "println",
  "defmt",
] }

# smoltcp = { version = "0.12.0", default-features = false, features = [
#   "medium-ethernet",
#   "multicast",
#   "proto-dhcpv4",
#   "proto-dns",
#   "proto-ipv4",
#   "socket-dns",
#   "socket-icmp",
#   "socket-raw",
#   "socket-tcp",
#   "socket-udp",
# ] }
# embassy-net = { version = "0.6.0", features = [
#   "dhcpv4",
#   "medium-ethernet",
#   "tcp",
#   "udp",
# ] }

# for more networking protocol support see https://crates.io/crates/edge-net
# bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
#   "async",
#   "macros",
# ] }

esp-wifi = { version = "0.14.1", features = [
  "ble",
  # "wifi",
] }
embassy-sync = "0.7.0"
trouble-host = {version = "0.2.3", features = ["default-packet-pool-mtu-255"]}
bt-hci = { version = "0.3.2" }
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
rand_core = { version = "0.6", default-features = false }

[features]
default = ["esp32"]

esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy/esp32", "esp-println/esp32", "esp-wifi/esp32", "defmt"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"


[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false
